--- a/src/app/bio/bio.component.html
+++ b/src/app/bio/bio.component.html
@@ -1,1 +1,29 @@
-<p>bio works!</p>
+<div class="main">
+  <app-parallax
+    inputImageUrl="../../assets/images/band.jpeg"
+    inputName="Worst Wishes"
+    inputText="Worst Wishes is a Ukrainian band performing alternative metal. It was founded in Kharkiv in 2020.
+    The ideological beginning of the band occurred with the
+  acquaintance of Evgeny Levchenko and Vyacheslav Kobykhno. They met in the subway passage where Vyacheslav
+  performed on guitar, and soon enough they had an idea to form a cover band.
+After a while, they formed a full-fledged group. Danilo Butkevich left another band to become their drummer.
+Eugene Klimenko, who was already familiar with the band’s music, became their second guitarist at an after-gig party.
+Alexander Fomin, who had studied with Yevgeny in the past, became a bassist.
+Having started the writing of original songs, the band began moving away from the cover format and started to rely
+on their own material."></app-parallax>
+  <app-parallax inputImageUrl="../../assets/images/i1.jpg"
+                inputName="Evgeny Levchenko"
+                inputText="Rhythm guitar, Editor, Terraria builder"></app-parallax>
+  <app-parallax inputImageUrl="../../assets/images/i2.jpg"
+                inputName="Danilo Butkevich"
+                inputText="Drums, School, Organized crime"></app-parallax>
+  <app-parallax inputImageUrl="../../assets/images/i3.jpg"
+                inputName="Vyacheslav Kobykhno"
+                inputText="Vocals, Riffs, Bitches"></app-parallax>
+  <app-parallax inputImageUrl="../../assets/images/i4.jpg"
+                inputName="Alexander Fomin"
+                inputText="ABOBAss"></app-parallax>
+  <app-parallax inputImageUrl="../../assets/images/i5.jpg"
+                inputName="Eugene Klimenko"
+                inputText="Solo guitar, Alcoholism, Development of this shitty website"></app-parallax>
+</div>
